# Sofa.Metis

./: CMakeLists.txt  README.md  Sofa.MetisConfig.cmake.in
.github/workflows/: ci.yml
src/sofa/metis/: MetisOrderingMethod.cpp  MetisOrderingMethod.h  config.h.in  init.cpp  init.h
tests/: CMakeLists.txt  testMetis.cpp
